add link across pages

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,7 @@
+<!DOCTYPE html>
 <html>
-<h1> Hi, <%=name %>, to Grandma's server!</h1>
-<img src=”../public/unknown.jpeg”>
+<a href = "/cat" ><img src="/images/cat.jpeg" alt = "a cat" width = "150" height = "100"></a>
+<h1> Hi, April, welcome to Grandma's server!</h1>
+
+<%# <img src="/cat.jpeg" alt = "Reading Nook logo" width = "150" height = "100"></a> %>
 </html>
